--- a/page.html
+++ b/page.html
@@ -8,64 +8,73 @@
 <body>
 
 <h1>
-    Селекторы в CSS
+    CSS
 </h1>
 
-<div class="all">
-    <div class="left">
-        <h2>
-            Простые селекторы
-        </h2>
+<h2>
+    Простые селекторы
+</h2>
 
-        <p class="blue section colorized"> Хотим выделить отдельно первый параграф? Используем идентификатор! </p>
-        <p class="blue"> Второй и третий параграф принципиально друг от друга не отличаются, что делать в такой ситуации? </p>
-        <p class="blue"> Могут помочь классы! </p>
-        <p class="blue" id="red"> Что будет с ним? </p>
-    </div>
-    <div class="right">
-        <h2>
-            Сложные селекторы
-        </h2>
+<p>
+    Позволяют выбрать множество тегов в html-файле и задать для них некоторые параметры,
+    <span class="italic"> например, выделить курсивом </span>, изменить <span class="red"> цвет </span> и много всего
+    другого.
+</p>
 
-        <p> Но здесь тоже есть первый параграф. Можно сделать класс, а можно посмотреть на соседей. </p>
-
-        <a href="https://www.w3schools.com/cssref/default.asp">Материалы по CSS</a>
-
-        <p>
-            <a href="http://htmlbook.ru/">Материалы по HTML</a>
-        </p>
-
-        <p>
-            <span>
-                <a href="https://www.w3schools.com/cssref/css_selectors.asp">Материалы по селекторам</a>
-            </span>
-        </p>
-
-        <a href="http://github.com/">Github</a>
-    </div>
-
-</div>
-
-<div> <p> Какие основные виды селекторов нужно запомнить? </p> </div>
 <ul>
-    <li>Тип тега</li>
-    <li>Класс</li>
-    <li>Идентификатор</li>
-    <li>Вложение</li>
-    <li>Соседство</li>
-    <li>Знать, где посмотреть на другие виды</li>
+    <li> Выбор тега: <span class="code red"> span { color: red; } </span> </li>
+    <li> Задание класса или нескольких: <span class="code blue"> .blue { color: blue; } </span></li>
+    <li> Задание идентификатора: <span id="green" class="code"> #green { color: green; } </span></li>
+    <li> Можно перечислить через запятую несколько групп: <span id="also_green" class="code"> #green, #also_green { color: green; } </span></li>
 </ul>
 
+<p> Идентификатор должен встречаться на странице только один раз, иначе поведение не гарантируется. </p>
+<p>
+    Один тег можно отнести сразу к нескольким классам. Они перечисляются через пробел:
+    <span class="code blue">class="code blue"</span>
+</p>
+
 <h2>
-    Специфичность, средства разработки
+    Сложные селекторы
 </h2>
+
+<ul class="parent">
+    <li> Тег следует за заданным: <span id="darkmagenta" class="code"> h2 + p { color: darkmagenta; } </span></li>
+    <li> Вложенность, может быть не только в тег: <span class="code"> ul.parent span { color: olive; } </span> </li>
+    <li class="parent"> Непосредственный ребенок: <span class="code"> li.parent > span { color: darkgoldenrod; } </span></li>
+    <li> Комбинация вышеописанного: <span class="code"> li.parent + li span { color: darkcyan; } </span></li>
+    <li> Еще много всего, можно посмотреть по ссылке ниже. </li>
+</ul>
+
 <p>
-    Как выбирается то, какой стиль применить? Унаследованные перекрываются стилями, относящимися непосредственно к
-    элементу. Для стилей, применяемых к элементу, считается наиболее специфичный и используется.
+    Подобные конструкции стоит использовать, с их помощью часто можно легко описать тот набор тегов, который
+    требуется изменить. Это предпочтительнее, чем использование исключительно классов и индентификаторов, поскольку на
+    больших страницах позволяет избежать ошибок из серии "забыл добавить класс у одного тега".
 </p>
 <p>
-    Чтобы проверить, что именно используется, можно пользоваться средствами разработки в браузере. В Chrome это F12.
+    Если для тега не определены некоторые свойства, например, цвет текста, то он наследует их у тега, в который он
+    вложен. Если ни у одного тега, лежащего выше по дереву, они также не определены, то используются стандартные свойства
+    для браузера. В случае с отступами наследование не происходит, а сразу используются стандартные значения для браузера,
+    если не сказано иного.
 </p>
+<p>
+    Для одного тега может быть несколько правил в CSS файле, которые задают ему один и тот же параметр. Например,
+    правило, задающее цвет для всех тегов <span class="red">span</span>, правило, задающее цвет для всех с классом
+    <span class="blue">blue</span>, и какая-нибудь сложная конструкция с вложениями и соседством. Для каждого правила
+    считается приоритет. Каждый тег имеет вклад 1, класс — 10, а идентификатор — 100. Для правила считается сумма
+    вкладов его членов и используется правило с наибольшим вкладом. Если же таких несколько, то последнее из описанных
+    в файле.
+</p>
+<p>
+    Чтобы понять, почему у вашего тега именно такой стиль, а не тот, который вы ожидали увидеть, удобно пользоваться
+    консолью разработчика в браузере. Например, в Google Chrome она открывается путем нажатия на F12. Там же можно
+    увидеть ошибки, которые произошли при попытке загрузить и применить ваш CSS файл.
+</p>
+
+<h3>Полезные ссылки</h3>
+<a class="cool_ref" href="http://htmlbook.ru/">HTML</a>
+<a class="cool_ref" href="https://www.w3schools.com/cssref/default.asp">CSS</a>
+<a class="cool_ref" href="https://www.w3schools.com/cssref/css_selectors.asp">Селекторы</a>
 
 </body>
 </html>
