--- a/page.html
+++ b/page.html
@@ -71,8 +71,22 @@
     увидеть ошибки, которые произошли при попытке загрузить и применить ваш CSS файл.
 </p>
 
+<h2>Псевдоклассы</h2>
+
+<p>
+    Множество тегов с выполненным определенным свойством. Записываются через двоеточие. Например,
+    <span class="code">a:visited { color: olive; }</span> позволяет выделить ссылки, по которым уже переходили, не
+    фиолетовым цветом, а оливковым. Чтобы сделать что-то только с непосещенными ссылками, следует использовать
+    <span class="code">a:link</span>.
+</p>
+<p>
+    С помощью псевдоклассов можно задать определенный стиль тегу, когда на него наведен курсор мыши. Для этого
+    используется класс <span class="code">:hover</span>. Например, пока что так изменяется цвет у заголовков на этой
+    странице:  <span class="code">h2:hover { color: darkslategrey; } </span>
+</p>
+
 <h3>Полезные ссылки</h3>
-<a class="cool_ref" href="http://htmlbook.ru/">HTML</a>
+<a class="cool_ref" href="https://www.w3schools.com/tags/default.asp">HTML</a>
 <a class="cool_ref" href="https://www.w3schools.com/cssref/default.asp">CSS</a>
 <a class="cool_ref" href="https://www.w3schools.com/cssref/css_selectors.asp">Селекторы</a>
 
