Ссылки внутри страницы.

--- a/page.html
+++ b/page.html
@@ -11,8 +11,10 @@
     CSS
 </h1>
 
+<div id="selectors">
+
 <h2>
-    Простые селекторы
+    <a name="simple_selectors"> Простые селекторы </a>
 </h2>
 
 <p>
@@ -34,7 +36,7 @@
     <span class="code blue">class="code blue"</span>
 </p>
 
-<h2>
+<h2 id="complex_selectors">
     Сложные селекторы
 </h2>
 
@@ -85,10 +87,14 @@
     странице:  <span class="code">h2:hover { color: darkslategrey; } </span>
 </p>
 
+</div>
+
 <h3>Полезные ссылки</h3>
 <a class="cool_ref" href="https://www.w3schools.com/tags/default.asp">HTML</a>
 <a class="cool_ref" href="https://www.w3schools.com/cssref/default.asp">CSS</a>
 <a class="cool_ref" href="https://www.w3schools.com/cssref/css_selectors.asp">Селекторы</a>
+<a class="cool_ref" href="#simple_selectors">Простые селекторы</a>
+<a class="cool_ref" href="#complex_selectors">Сложные селекторы</a>
 
 </body>
 </html>
