--- a/page.html
+++ b/page.html
@@ -11,82 +11,103 @@
     CSS
 </h1>
 
-<div id="selectors">
+<div class="chapter" id="selectors">
 
-<h2>
-    <a name="simple_selectors"> Простые селекторы </a>
-</h2>
+    <h2>
+        <a name="simple_selectors"> Простые селекторы </a>
+    </h2>
 
-<p>
-    Позволяют выбрать множество тегов в html-файле и задать для них некоторые параметры,
-    <span class="italic"> например, выделить курсивом </span>, изменить <span class="red"> цвет </span> и много всего
-    другого.
-</p>
+    <p>
+        Позволяют выбрать множество тегов в html-файле и задать для них некоторые параметры,
+        <span class="italic"> например, выделить курсивом </span>, изменить <span class="red"> цвет </span> и много всего
+        другого.
+    </p>
 
-<ul>
-    <li> Выбор тега: <span class="code red"> span { color: red; } </span> </li>
-    <li> Задание класса или нескольких: <span class="code blue"> .blue { color: blue; } </span></li>
-    <li> Задание идентификатора: <span id="green" class="code"> #green { color: green; } </span></li>
-    <li> Можно перечислить через запятую несколько групп: <span id="also_green" class="code"> #green, #also_green { color: green; } </span></li>
-</ul>
+    <ul>
+        <li> Выбор тега: <span class="code red"> span { color: red; } </span> </li>
+        <li> Задание класса или нескольких: <span class="code blue"> .blue { color: blue; } </span></li>
+        <li> Задание идентификатора: <span id="green" class="code"> #green { color: green; } </span></li>
+        <li> Можно перечислить через запятую несколько групп: <span id="also_green" class="code"> #green, #also_green { color: green; } </span></li>
+    </ul>
 
-<p> Идентификатор должен встречаться на странице только один раз, иначе поведение не гарантируется. </p>
-<p>
-    Один тег можно отнести сразу к нескольким классам. Они перечисляются через пробел:
-    <span class="code blue">class="code blue"</span>
-</p>
+    <p> Идентификатор должен встречаться на странице только один раз, иначе поведение не гарантируется. </p>
+    <p>
+        Один тег можно отнести сразу к нескольким классам. Они перечисляются через пробел:
+        <span class="code blue">class="code blue"</span>
+    </p>
 
-<h2 id="complex_selectors">
-    Сложные селекторы
-</h2>
+    <h2 id="complex_selectors">
+        Сложные селекторы
+    </h2>
 
-<ul class="parent">
-    <li> Тег следует за заданным: <span id="darkmagenta" class="code"> h2 + p { color: darkmagenta; } </span></li>
-    <li> Вложенность, может быть не только в тег: <span class="code"> ul.parent span { color: olive; } </span> </li>
-    <li class="parent"> Непосредственный ребенок: <span class="code"> li.parent > span { color: darkgoldenrod; } </span></li>
-    <li> Комбинация вышеописанного: <span class="code"> li.parent + li span { color: darkcyan; } </span></li>
-    <li> Еще много всего, можно посмотреть по ссылке ниже. </li>
-</ul>
+    <ul class="parent">
+        <li> Тег следует за заданным: <span id="darkmagenta" class="code"> h2 + p { color: darkmagenta; } </span></li>
+        <li> Вложенность, может быть не только в тег: <span class="code"> ul.parent span { color: olive; } </span> </li>
+        <li class="parent"> Непосредственный ребенок: <span class="code"> li.parent > span { color: darkgoldenrod; } </span></li>
+        <li> Комбинация вышеописанного: <span class="code"> li.parent + li span { color: darkcyan; } </span></li>
+        <li> Еще много всего, можно посмотреть по ссылке ниже. </li>
+    </ul>
 
-<p>
-    Подобные конструкции стоит использовать, с их помощью часто можно легко описать тот набор тегов, который
-    требуется изменить. Это предпочтительнее, чем использование исключительно классов и индентификаторов, поскольку на
-    больших страницах позволяет избежать ошибок из серии "забыл добавить класс у одного тега".
-</p>
-<p>
-    Если для тега не определены некоторые свойства, например, цвет текста, то он наследует их у тега, в который он
-    вложен. Если ни у одного тега, лежащего выше по дереву, они также не определены, то используются стандартные свойства
-    для браузера. В случае с отступами наследование не происходит, а сразу используются стандартные значения для браузера,
-    если не сказано иного.
-</p>
-<p>
-    Для одного тега может быть несколько правил в CSS файле, которые задают ему один и тот же параметр. Например,
-    правило, задающее цвет для всех тегов <span class="red">span</span>, правило, задающее цвет для всех с классом
-    <span class="blue">blue</span>, и какая-нибудь сложная конструкция с вложениями и соседством. Для каждого правила
-    считается приоритет. Каждый тег имеет вклад 1, класс — 10, а идентификатор — 100. Для правила считается сумма
-    вкладов его членов и используется правило с наибольшим вкладом. Если же таких несколько, то последнее из описанных
-    в файле.
-</p>
-<p>
-    Чтобы понять, почему у вашего тега именно такой стиль, а не тот, который вы ожидали увидеть, удобно пользоваться
-    консолью разработчика в браузере. Например, в Google Chrome она открывается путем нажатия на F12. Там же можно
-    увидеть ошибки, которые произошли при попытке загрузить и применить ваш CSS файл.
-</p>
+    <p>
+        Подобные конструкции стоит использовать, с их помощью часто можно легко описать тот набор тегов, который
+        требуется изменить. Это предпочтительнее, чем использование исключительно классов и индентификаторов, поскольку на
+        больших страницах позволяет избежать ошибок из серии "забыл добавить класс у одного тега".
+    </p>
+    <p>
+        Если для тега не определены некоторые свойства, например, цвет текста, то он наследует их у тега, в который он
+        вложен. Если ни у одного тега, лежащего выше по дереву, они также не определены, то используются стандартные свойства
+        для браузера. В случае с отступами наследование не происходит, а сразу используются стандартные значения для браузера,
+        если не сказано иного.
+    </p>
+    <p>
+        Для одного тега может быть несколько правил в CSS файле, которые задают ему один и тот же параметр. Например,
+        правило, задающее цвет для всех тегов <span class="red">span</span>, правило, задающее цвет для всех с классом
+        <span class="blue">blue</span>, и какая-нибудь сложная конструкция с вложениями и соседством. Для каждого правила
+        считается приоритет. Каждый тег имеет вклад 1, класс — 10, а идентификатор — 100. Для правила считается сумма
+        вкладов его членов и используется правило с наибольшим вкладом. Если же таких несколько, то последнее из описанных
+        в файле.
+    </p>
+    <p>
+        Чтобы понять, почему у вашего тега именно такой стиль, а не тот, который вы ожидали увидеть, удобно пользоваться
+        консолью разработчика в браузере. Например, в Google Chrome она открывается путем нажатия на F12. Там же можно
+        увидеть ошибки, которые произошли при попытке загрузить и применить ваш CSS файл.
+    </p>
 
-<h2>Псевдоклассы</h2>
+    <h2>Псевдоклассы</h2>
 
-<p>
-    Множество тегов с выполненным определенным свойством. Записываются через двоеточие. Например,
-    <span class="code">a:visited { color: olive; }</span> позволяет выделить ссылки, по которым уже переходили, не
-    фиолетовым цветом, а оливковым. Чтобы сделать что-то только с непосещенными ссылками, следует использовать
-    <span class="code">a:link</span>.
-</p>
-<p>
-    С помощью псевдоклассов можно задать определенный стиль тегу, когда на него наведен курсор мыши. Для этого
-    используется класс <span class="code">:hover</span>. Например, пока что так изменяется цвет у заголовков на этой
-    странице:  <span class="code">h2:hover { color: darkslategrey; } </span>
-</p>
+    <p>
+        Множество тегов с выполненным определенным свойством. Записываются через двоеточие. Например,
+        <span class="code">a:visited { color: olive; }</span> позволяет выделить ссылки, по которым уже переходили, не
+        фиолетовым цветом, а оливковым. Чтобы сделать что-то только с непосещенными ссылками, следует использовать
+        <span class="code">a:link</span>.
+    </p>
+    <p>
+        С помощью псевдоклассов можно задать определенный стиль тегу, когда на него наведен курсор мыши. Для этого
+        используется класс <span class="code">:hover</span>. Например, пока что так изменяется цвет у заголовков на этой
+        странице:  <span class="code">h2:hover { color: darkslategrey; } </span>
+    </p>
 
+</div>
+
+
+<div class="chapter" id="box_model">
+    <h2>
+        Box Model
+    </h2>
+    <div class="text_with_img">
+        <img class="half_width" src="BoxModel.png">
+        <p> Контент — содержимое тега, например, текст. Ширина и высота задаются именно для него. Из-за этого суммарная
+            ширина тега может превысить 100%, с этим нужно быть аккуратно. </p>
+        <p> Padding — отступ между содержимым тега и его границей. </p>
+        <p> Граница — может быть разной ширины, цветов, типов. В таблицах, если хотим, чтобы у клеточек были границы,
+            сделать их видимыми недостаточно. Тогда мы увидим двойную границу (у каждой из клеточек). Поэтому требуется
+            задать <span class="code">border collapse</span>  </p>
+        <p> Margin — отступ вокруг границы, отделяющий тег от окружающих. У двух элементов, соседних по вертикали,
+            внешние отступы могут склеиваться и заменяться на максимум из их отступов. </p>
+        <p> У тегов есть свойство <span class="code">box-sizing</span>, по умолчанию равное
+            <span class="code">content-box</span>. Можно изменить его на <span class="code">border-box</span> и граница
+            с padding'ом будут включаться в ширину и высоту. </p>
+    </div>
 </div>
 
 <h3>Полезные ссылки</h3>
