Больше про ширину и высоту.

--- a/page.html
+++ b/page.html
@@ -94,20 +94,24 @@
     <h2>
         Box Model
     </h2>
-    <div class="text_with_img">
-        <img class="half_width" src="BoxModel.png">
-        <p> Контент — содержимое тега, например, текст. Ширина и высота задаются именно для него. Из-за этого суммарная
-            ширина тега может превысить 100%, с этим нужно быть аккуратно. </p>
-        <p> Padding — отступ между содержимым тега и его границей. </p>
-        <p> Граница — может быть разной ширины, цветов, типов. В таблицах, если хотим, чтобы у клеточек были границы,
-            сделать их видимыми недостаточно. Тогда мы увидим двойную границу (у каждой из клеточек). Поэтому требуется
-            задать <span class="code">border collapse</span>  </p>
-        <p> Margin — отступ вокруг границы, отделяющий тег от окружающих. У двух элементов, соседних по вертикали,
-            внешние отступы могут склеиваться и заменяться на максимум из их отступов. </p>
-        <p> У тегов есть свойство <span class="code">box-sizing</span>, по умолчанию равное
-            <span class="code">content-box</span>. Можно изменить его на <span class="code">border-box</span> и граница
-            с padding'ом будут включаться в ширину и высоту. </p>
-    </div>
+    <img class="half_width" src="BoxModel.png">
+    <p> Контент — содержимое тега, например, текст. Ширина и высота задаются именно для него. Из-за этого суммарная
+        ширина тега может превысить 100%, с этим нужно быть аккуратно. </p>
+    <p> Padding — отступ между содержимым тега и его границей. </p>
+    <p> Граница — может быть разной ширины, цветов, типов. В таблицах, если хотим, чтобы у клеточек были границы,
+        сделать их видимыми недостаточно. Тогда мы увидим двойную границу (у каждой из клеточек). Поэтому требуется
+        задать <span class="code">border: collapse</span>  </p>
+    <p> Margin — отступ вокруг границы, отделяющий тег от окружающих. У двух элементов, соседних по вертикали,
+        внешние отступы могут склеиваться и заменяться на максимум из их отступов. </p>
+    <p> У тегов есть свойство <span class="code">box-sizing</span>, по умолчанию равное
+        <span class="code">content-box</span>. Можно изменить его на <span class="code">border-box</span> и граница
+        с padding'ом будут включаться в ширину и высоту. </p>
+    <p> <span class="code">margin: auto</span> используется, чтобы центрировать элемент по горизонтали. </p>
+    <p> Если задать абсолютную ширину, то при уменьшении размера экрана появится полоса прокрутки. Избежать этого
+        можно с помощью свойств <span class="code">max-width</span> и <span class="code">min-width</span>. Обратите
+        внимание, что они перезаписывают <span class="code">width</span>! </p>
+    <div class="clear"></div>
+
 </div>
 
 <h3>Полезные ссылки</h3>
