Добавил небольшую галерею.

--- a/page.html
+++ b/page.html
@@ -112,6 +112,23 @@
         внимание, что они перезаписывают <span class="code">width</span>! </p>
     <div class="clear"></div>
 
+    <p> С помощью <span class="code">float</span> можно сделать галерею картинок, которая будет сама адаптироваться к
+        изменениям размера окна. </p>
+
+    <img class="fixed_width" src="Pic1.jpg">
+    <img class="fixed_width" src="Pic2.jpg">
+    <img class="fixed_width" src="Pic3.jpg">
+    <img class="fixed_width" src="Pic4.jpg">
+    <img class="fixed_width" src="Pic5.jpg">
+
+    <div class="clear"></div>
+
+    <h2>
+        Отображение, позиционирование
+    </h2>
+    <div class="tile">Наведи на меня</div>
+    <div class="tile hidden">Спрятанный текст</div>
+
 </div>
 
 <h3>Полезные ссылки</h3>
