Вынес картинки в отдельную папку.

--- a/page.html
+++ b/page.html
@@ -94,7 +94,7 @@
     <h2>
         Box Model
     </h2>
-    <img class="half_width" src="BoxModel.png">
+    <img class="half_width" src="Pics/BoxModel.png">
     <p> Контент — содержимое тега, например, текст. Ширина и высота задаются именно для него. Из-за этого суммарная
         ширина тега может превысить 100%, с этим нужно быть аккуратно. </p>
     <p> Padding — отступ между содержимым тега и его границей. </p>
@@ -115,11 +115,11 @@
     <p> С помощью <span class="code">float</span> можно сделать галерею картинок, которая будет сама адаптироваться к
         изменениям размера окна. </p>
 
-    <img class="fixed_width" src="Pic1.jpg">
-    <img class="fixed_width" src="Pic2.jpg">
-    <img class="fixed_width" src="Pic3.jpg">
-    <img class="fixed_width" src="Pic4.jpg">
-    <img class="fixed_width" src="Pic5.jpg">
+    <img class="fixed_width" src="Pics/Pic1.jpg">
+    <img class="fixed_width" src="Pics/Pic2.jpg">
+    <img class="fixed_width" src="Pics/Pic3.jpg">
+    <img class="fixed_width" src="Pics/Pic4.jpg">
+    <img class="fixed_width" src="Pics/Pic5.jpg">
 
     <div class="clear"></div>
 
