Начало второго блока.

--- a/page.html
+++ b/page.html
@@ -129,6 +129,10 @@
     <div class="tile">Наведи на меня</div>
     <div class="tile hidden">Спрятанный текст</div>
 
+    <p> Теги не обязаны всегда быть строчными или блочными. Переопределяя свойство <span class="code">display</span> можно
+        сделать блочные гиперссылки или строчные элементы списка, что позволяет делать горизонтальные меню. Задавая
+        <span class="code">none</span> можно спрятать тег со страницы, что будет полезно, когда мы займемся JS или для
+        создания выпадающих меню. </p>
 </div>
 
 <h3>Полезные ссылки</h3>
