--- a/page.html
+++ b/page.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Селекторы</title>
+    <title>Веб-программирование</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
