Пример бокового меню

--- a/page.html
+++ b/page.html
@@ -153,6 +153,21 @@
         сделать блочные гиперссылки или строчные элементы списка, что позволяет делать горизонтальные меню. Задавая
         <span class="code">none</span> можно спрятать тег со страницы, что будет полезно, когда мы займемся JS или для
         создания выпадающих меню. </p>
+
+    <p> С помощью уже известных инструментов можно сделать красивое меню, но как закрепить его наверху или сбоку?
+        У тегов есть параметр <span class="code">position</span>, он используется для управления положением тега на
+        странице. По умолчанию его значением задано <span class="code">static</span>, тег занимает место в соответствии
+        с разметкой страницы. </p>
+
+    <ul>
+        <li> <span class="code">static</span>: тег занимает свое место на странице.</li>
+        <li> <span class="code">relative</span>: рассчитывается место тега на странице и к нему добавляется сдвиг,
+            задаваемый параметрами <span class="code">left, top, right, bottom</span>.</li>
+        <li> <span class="code">fixed</span>: положение тега не зависит от прокрутки и другого содержимого страницы,
+            а задается параметрами <span class="code">left, top, right, bottom</span>.</li>
+        <li> <span class="code">absolute</span>: положение тега относительно тега, его включающего, который был не
+            <span class="code">static</span>.</li>
+    </ul>
 </div>
 
 <h3>Полезные ссылки</h3>
