--- a/page.html
+++ b/page.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1>
+<h1 id="beginning">
     CSS
 </h1>
 
@@ -84,7 +84,7 @@
     <p>
         С помощью псевдоклассов можно задать определенный стиль тегу, когда на него наведен курсор мыши. Для этого
         используется класс <span class="code">:hover</span>. Например, пока что так изменяется цвет у заголовков на этой
-        странице:  <span class="code">h2:hover { color: darkslategrey; } </span>
+        странице:  <span class="code">h2:hover { color: dimgrey; } </span>
     </p>
 
 </div>
@@ -171,6 +171,7 @@
 </div>
 
 <h3>Полезные ссылки</h3>
+<a class="cool_ref" href="#beginning"> Начало </a>
 <a class="cool_ref" href="https://www.w3schools.com/tags/default.asp">HTML</a>
 <a class="cool_ref" href="http://htmlbook.ru/">HTML на русском</a>
 <a class="cool_ref" href="https://www.w3schools.com/cssref/default.asp">CSS</a>
