--- a/page.html
+++ b/page.html
@@ -170,6 +170,63 @@
     </ul>
 </div>
 
+<div class="chapter" id="tables_and_menus">
+    <h2>
+        Таблицы
+    </h2>
+
+    <p> Пример таблицы, стилями преобразованной в адекватный вид: </p>
+
+    <table id="customers">
+        <tr>
+            <th>Заказчик</th>
+            <th>Товар</th>
+            <th>Категория</th>
+        </tr>
+        <tr>
+            <td>Рамстор</td>
+            <td>Ванильное небо</td>
+            <td>Печенье</td>
+        </tr>
+        <tr>
+            <td>Рамстор</td>
+            <td>Попугай</td>
+            <td>Батончики</td>
+        </tr>
+        <tr>
+            <td>Копейка</td>
+            <td>Сырные</td>
+            <td>Крекеры</td>
+        </tr>
+        <tr>
+            <td>Копейка</td>
+            <td>Чесночные</td>
+            <td>Крекеры</td>
+        </tr>
+        <tr>
+            <td>Метро</td>
+            <td>Картофельные чипсы</td>
+            <td>Крекеры</td>
+        </tr>
+        <tr>
+            <td>Рамсторма</td>
+            <td>Браво</td>
+            <td>Батончики</td>
+        </tr>
+        <tr>
+            <td>Ашан</td>
+            <td>Укроп</td>
+            <td>Крекеры</td>
+        </tr>
+        <tr>
+            <td>Рамстор</td>
+            <td>Банановый рай</td>
+            <td>Батончики</td>
+        </tr>
+    </table>
+
+</div>
+
 <h3>Полезные ссылки</h3>
 <a class="cool_ref" href="#beginning"> Начало </a>
 <a class="cool_ref" href="https://www.w3schools.com/tags/default.asp">HTML</a>
