Навигация по странице.

--- a/page.html
+++ b/page.html
@@ -7,11 +7,18 @@
 </head>
 <body>
 
-<h1 id="beginning">
+<ul class="top_menu">
+    <li><a href="#anchor_selectors">Селекторы</a></li>
+    <li><a href="#anchor_box_model">Box-model</a></li>
+    <li><a href="#anchor_tables_and_menus">Таблицы и меню</a></li>
+</ul>
+
+<h1 class="first" id="beginning">
     CSS
 </h1>
 
 <div class="chapter" id="selectors">
+    <a name="anchor_selectors" class="anchor"></a>
 
     <h2>
         <a name="simple_selectors"> Простые селекторы </a>
@@ -91,6 +98,8 @@
 
 
 <div class="chapter" id="box_model">
+    <a name="anchor_box_model" class="anchor"></a>
+
     <h2>
         Box Model
     </h2>
@@ -171,6 +180,8 @@
 </div>
 
 <div class="chapter" id="tables_and_menus">
+    <a name="anchor_tables_and_menus" class="anchor"></a>
+
     <h2>
         Таблицы
     </h2>
