Выпадающее меню со ссылками.

--- a/page.html
+++ b/page.html
@@ -8,9 +8,22 @@
 <body>
 
 <ul class="top_menu">
-    <li><a href="#anchor_selectors">Селекторы</a></li>
-    <li><a href="#anchor_box_model">Box-model</a></li>
-    <li><a href="#anchor_tables_and_menus">Таблицы и меню</a></li>
+    <li><a class="nav_ref" href="#anchor_selectors">Селекторы</a></li>
+    <li><a class="nav_ref" href="#anchor_box_model">Box-model</a></li>
+    <li><a class="nav_ref" href="#anchor_tables_and_menus">Таблицы и меню</a></li>
+    <li>
+        <div class="dropdown">
+            <a class="nav_ref">
+                Полезные ссылки
+            </a>
+            <div class="dropdown-content">
+                <a href="https://www.w3schools.com/tags/default.asp">HTML</a>
+                <a href="http://htmlbook.ru/">HTML на русском</a>
+                <a href="https://www.w3schools.com/cssref/default.asp">CSS</a>
+                <a href="https://www.w3schools.com/cssref/css_selectors.asp">Селекторы</a>
+            </div>
+        </div>
+    </li>
 </ul>
 
 <h1 class="first" id="beginning">
@@ -237,13 +250,6 @@
     </table>
 
 </div>
-
-<h3>Полезные ссылки</h3>
-<a class="cool_ref" href="#beginning"> Начало </a>
-<a class="cool_ref" href="https://www.w3schools.com/tags/default.asp">HTML</a>
-<a class="cool_ref" href="http://htmlbook.ru/">HTML на русском</a>
-<a class="cool_ref" href="https://www.w3schools.com/cssref/default.asp">CSS</a>
-<a class="cool_ref" href="https://www.w3schools.com/cssref/css_selectors.asp">Селекторы</a>
 
 </body>
 </html>
