Скелет материала занятия.

--- a/page.html
+++ b/page.html
@@ -249,7 +249,23 @@
         </tr>
     </table>
 
+    <h2>
+        Верхнее меню
+    </h2>
+
+    <p> Используем <span class="code">position: fixed</span>, чтобы закрепить меню вверху страницы. Создаем его из
+        списка, элементы которого "уплывают" налево или направо. Как и для таблиц, с помощью стилей делаем элементы
+        списка прилично выглядящими. </p>
+
+    <p> Навигация по странице при помощи идентификаторов работает не совсем так, как мы ожидаем, поэтому можно
+        воспользоваться якорями. В будущем мы узнаем, как делать то же самое при помощи JS. </p>
+    <p> К элементам списка можно добавить выпадающие меню. </p>
+
 </div>
+
+<h1>
+    Когда-то здесь будет JS
+</h1>
 
 </body>
 </html>
