--- a/page.html
+++ b/page.html
@@ -233,7 +233,7 @@
             <td>Крекеры</td>
         </tr>
         <tr>
-            <td>Рамсторма</td>
+            <td>Рамстор</td>
             <td>Браво</td>
             <td>Батончики</td>
         </tr>
