--- a/page.html
+++ b/page.html
@@ -11,6 +11,7 @@
     <li><a class="nav_ref" href="#anchor_selectors">Селекторы</a></li>
     <li><a class="nav_ref" href="#anchor_box_model">Box-model</a></li>
     <li><a class="nav_ref" href="#anchor_tables_and_menus">Таблицы и меню</a></li>
+    <li><a class="nav_ref" href="#anchor_js">JavaScript</a></li>
     <li>
         <div class="dropdown">
             <a class="nav_ref">
@@ -264,8 +265,14 @@
 </div>
 
 <h1>
-    Когда-то здесь будет JS
+    JavaScript
 </h1>
+
+<div class="chapter" id="js">
+    <a name="anchor_js" class="anchor"></a>
+    <p> Язык программирования, наиболее широко применяющийся для придания интерактивности веб-страницам.
+        Поддерживается всеми браузерами.</p>
+</div>
 
 </body>
 </html>
