Шаблон для страницы

--- a/simple_js/simple-page.html
+++ b/simple_js/simple-page.html
@@ -18,21 +18,11 @@
         Примеры по JavaScript
     </h2>
 
-    <div>
-        <p> Первое число: </p>
-        <input type="text" id="first">
-    </div>
+    <button onclick="multiplyBy2()">Умножение на 2</button>
 
-    <div>
-        <p> Второе число: </p>
-        <input type="text" id="second">
-    </div>
+    <button onclick="raiseToPower()">Возведение в степень</button>
 
-    <p>Сумма:</p>
-
-    <button onclick="calcSum()">Посчитать сумму</button>
-
-    <p id="sum"></p>
+    <p id="output"></p>
 
 </div>
 
