--- a/simple_js/simple-page.html
+++ b/simple_js/simple-page.html
@@ -18,9 +18,7 @@
         Примеры по JavaScript
     </h2>
 
-    <button onclick="multiplyBy2()">Умножение на 2</button>
-
-    <button onclick="raiseToPower()">Возведение в степень</button>
+    <button onclick="raiseToPower()">Возвести в степень</button>
 
     <p id="output"></p>
 
